# Contests

./: .gitignore
CodeForces.Education67.Div2/: CodeForces.Education67.Div2.sln
CodeForces.Education67.Div2/A.StickersAndToys/: A.StickersAndToys.csproj  Program.cs
CodeForces.Education67.Div2/B.LettersShop/: B.LettersShop.csproj  Program.cs
CodeForces.Education67.Div2/C.VasyaAndArray/: C.VasyaAndArray.csproj  Program.cs
CodeForces.Education67.Div2/D.SubarraySorting/: D.SubarraySorting.csproj  Program.cs
CodeForces.Education67.Div2/E.TreePainting/: E.TreePainting.csproj  Program.cs
CodeForces.Education67.Div2/G.GangUp/: G.GangUp.csproj  Program.cs
CodeForces566.Div2/: CodeForces566.Div2.sln
CodeForces566.Div2/A.FillingShapes/: A.FillingShapes.csproj  Program.cs
CodeForces566.Div2/B.PlusFromPicture/: B.PlusFromPicture.csproj  Program.cs
CodeForces566.Div2/C.BeautifulLyrics/: C.BeautifulLyrics.csproj  Program.cs
CodeForces566.Div2/D.CompleteMirror/: D.CompleteMirror.csproj  Program.cs
CodeForces569.Div2/: CodeForces569.Div2.sln
CodeForces580.Div2/: CodeForces580.Div2.sln
CodeForces599.Div2/: CodeForces599.Div2.sln
CodeForces610.Div2/: CodeForces610.Div2.sln
CodeForces669.Div2/: CodeForced669.Div2.sln
CodeForces685.Div2/: CodeForces685.Div2.sln
Yandex2019AutumnQuals/: A.DynamicPrices.cpp  B.PriceCalculator.cpp  C.PowerStations.cpp  CMakeLists.txt  D.TaxiTimetable.cpp
Yandex2019SpringFinal/: Yandex2019SpringFinal.sln
Yandex2019SpringQuals/: Yandex2019SpringQuals.sln
YandexCup2020Backend/: YandexCup2020Backend.sln
(+78 files in other folders)
