cmake_minimum_required(VERSION 3.14)
project(YandexQualsAutumn)

set(CMAKE_CXX_STANDARD 17)

add_executable(A.DynamicPrices A.DynamicPrices.cpp)
add_executable(B.PriceCalculator B.PriceCalculator.cpp)
add_executable(C.PowerStations C.PowerStations.cpp)
add_executable(D.TaxiTimetable D.TaxiTimetable.cpp)